# cob_test_robots

./: README.md
cob_torso_2dof/: CMakeLists.txt  mainpage.dox  package.xml
cob_torso_2dof/calibration/: calibration.urdf.xacro
cob_torso_2dof/config/: Elmo.dcf  command_gui_buttons.yaml  diagnostics_analyzers.yaml  joint_configurations.yaml  joint_limits.yaml  torso_cartesian_controller.yaml  torso_controller.yaml  torso_driver.yaml
cob_torso_2dof/launch/: dashboard.launch  robot.launch  sim.launch
cob_torso_2dof/urdf/: robot.urdf.xacro
cob_torso_2dof/urdf/test/: urdf.test
